--- a/config/_application-prod.yaml
+++ b/config/_application-prod.yaml
@@ -1,9 +1,9 @@
 # template for server
 app:
-  host-url: http://localhost
+  host-url: http://10.1.1.101
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/jira
+    url: jdbc:postgresql://10.1.1.101:5432/jira
     username: jira
     password: JiraRush
 
